convert from Guava immutable collections to JDK immutable collections, finished